# Kill_Engine

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  KillEngine.sln  README.md  Test.lua  devlog.txt  engine.logs  memory.logs  nob  nobuild.c  premake5.lua  r.sh  test.c
KillEngine/: KillEngine.vcxproj  KillEngine.vcxproj.filters
KillEngine/src/: Kei.h  Keipch.cpp  Keipch.h  Test.cpp  Test.h
KillEngine/src/Kei/: Application.cpp  Application.h  Core.h  EntryPoint.h  Keycodes.h  Log.cpp  Log.h  MouseCodes.h  Window.h
KillEngine/src/Kei/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
KillEngine/src/Kei/Misc/: Clock.h  Info  Test.h
Sandbox/: Sandbox.vcxproj
Sandbox/src/: Application.cpp  SandboxApp.cpp
assets/materials/: test.kill
assets/shaders/: Builtin.ObjectShader.frag.glsl  Builtin.ObjectShader.vert.glsl
bin-int/Debug-x64/KillEngine/: KillEngine.dll.recipe  KillEngine.ilk  vc143.idb
bin-int/Debug-x64/KillEngine/KillEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  KillEngine.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/Debug-x64/Sandbox/: Sandbox.exe.recipe  Sandbox.ilk  vc143.idb
bin-int/Debug-x64/Sandbox/Sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Sandbox.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
engine/: CMakeLists.txt
engine/src/: '  defines.h  entry.h  gametypes.h  test.c
engine/src/containers/: darray.c  darray.h  hashtable.c  hashtable.h
engine/src/core/: '  application.c  application.h  clock.c  clock.h  defines.c  errors.c  errors.h  events.c  events.h  filesystem.c  filesystem.h  input.c  input.h  kmemory.c  kmemory.h  kstring.c  kstring.h  logger.c  logger.h  platform.c  platform.h
engine/src/math/: kmath.c  kmath.h  mathtypes.h
engine/src/memory/: linearallocator.c  linearallocator.h
engine/src/platform/: filesystem.c  platform.c  platform.h
engine/src/renderer/: commandbuffer.c  commandbuffer.h  device.c  device.h  fence.c  fence.h  framebuffer.c  framebuffer.h  image.c  image.h  rendererbackend.c  rendererbackend.h  rendererfrontend.c  rendererfrontend.h  renderertypes.h  rendererutils.c  rendererutils.h  renderpass.c  renderpass.h  swapchain.c  swapchain.h  utils.c  utils.h  vulkanbuffer.c  vulkanbuffer.h  vulkancommandbuffer.c  vulkancommandbuffer.h  vulkandevice.c  vulkandevice.h  vulkanfence.c  vulkanfence.h  vulkanframebuffer.c  vulkanframebuffer.h  vulkanimage.c  vulkanimage.h  vulkanpipeline.c  vulkanpipeline.h  vulkanplatform.h  vulkanrenderpass.c  vulkanrenderpass.h  (+3 more)
engine/src/renderer/shaders/: materialshader.c  materialshader.h  shaderutils.c  shaderutils.h  vulkanobjectshader.c  vulkanobjectshader.h  vulkanshaderobject.c  vulkanshaderobject.h
engine/src/resource/: resourcetypes.h
engine/src/resources/: resourcetypes.h
engine/src/systems/: materialsystem.c  materialsystem.h  texturesystem.c  texturesystem.h
testbed/: CMakeLists.txt
testbed/src/: entry.c  game.c  game.h  main.c
tests/: CMakeLists.txt  mktest.sh  testmanager.c  testmanager.h
tests/darray/: darray.c
tests/filesystem/: filesystem.c  test.c  test.txt
tests/hashtable/: test.c
tests/kmemory/: kmemory.c
tests/kstring/: test.c
tests/linearallocator/: CMakeLists.txt  linearallocator.c  linearallocatortests.c  linearallocatortests.h  src1.c  test.c
tests/logger/: logger.c
tests/test/: test.c
